@@ -6,6 +6,9 @@ ViSP 2.x.y
     - [7638] Memory leak in all vpFeature... classes was reopened
     - [7888] vpV4l2Grabber cannot acquire an image from an analog camera 
 	     on Ubuntu 8.04 Hardy Heron
+    - [7994] vpMeLine : initialization problem for horizontal lines
+    - [8001] Coin and SoQt are not detected during CMake configuration
+	     under Fedora 10
 ----------------------------------------------	
 ViSP 2.4.3 (released April 10th, 2009)
   - New Features
